动态sql, Configuration, 插件